[gd_scene load_steps=16 format=3 uid="uid://bdi0740u2qw2n"]

[ext_resource type="Script" uid="uid://b2eivt8fhs87i" path="res://scripts/snake.gd" id="1_l4b1q"]
[ext_resource type="Texture2D" uid="uid://b3appi672poi4" path="res://assests/temple/enimes/1 Snake/snake spritesheet.png" id="2_l4b1q"]
[ext_resource type="Script" uid="uid://b4nl0nemb21gc" path="res://scripts/hitbox.gd" id="4_l4b1q"]
[ext_resource type="AudioStream" uid="uid://deotmpac4kptb" path="res://assests/temple/sound eff/hiss3-103123.mp3" id="6_jsoxa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qtoy0"]
atlas = ExtResource("2_l4b1q")
region = Rect2(0, 644, 274, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6442"]
atlas = ExtResource("2_l4b1q")
region = Rect2(274, 644, 274, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsoxa"]
atlas = ExtResource("2_l4b1q")
region = Rect2(548, 644, 274, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ryw0"]
atlas = ExtResource("2_l4b1q")
region = Rect2(822, 644, 274, 161)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj63r"]
atlas = ExtResource("2_l4b1q")
region = Rect2(0, 200, 274, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f07f3"]
atlas = ExtResource("2_l4b1q")
region = Rect2(274, 200, 274, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_10gix"]
atlas = ExtResource("2_l4b1q")
region = Rect2(548, 200, 274, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uotcb"]
atlas = ExtResource("2_l4b1q")
region = Rect2(822, 200, 274, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_l1qxe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtoy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6442")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsoxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ryw0")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj63r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f07f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10gix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uotcb")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l4b1q"]
radius = 4.99006
height = 25.9801

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p6442"]
height = 28.0

[node name="snake" type="Node2D"]
script = ExtResource("1_l4b1q")
health = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 4
position = Vector2(2, -7)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_l1qxe")
animation = &"death"
autoplay = "move"
frame_progress = 0.5862
flip_h = true

[node name="raycastR" type="RayCast2D" parent="."]
position = Vector2(-3, -4)
target_position = Vector2(19, 0)
collision_mask = 4

[node name="raycastL" type="RayCast2D" parent="."]
position = Vector2(5, -4)
rotation = 3.14159
target_position = Vector2(19, -1.43051e-06)
collision_mask = 4

[node name="HitBoxs" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("4_l4b1q")
metadata/_custom_type_script = "uid://b4nl0nemb21gc"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxs"]
position = Vector2(1.99006, -0.828007)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_l4b1q")
debug_color = Color(0.973374, 0, 0.434444, 0.42)

[node name="hurtm" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtm"]
position = Vector2(3, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_p6442")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_jsoxa")
volume_db = 6.5

[connection signal="area_entered" from="hurtm" to="." method="_on_hurtm_area_entered"]
[connection signal="body_entered" from="hurtm" to="." method="_on_hurtm_body_entered"]
[connection signal="body_exited" from="hurtm" to="." method="_on_hurtm_body_exited"]
